[tool.poetry]
name = "streamlit-custom-image-labller"
version = "0.1.0"
description = ""
authors = ["MinDong <mdskylover@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.9.0"
watchdog = "^2.1.7"
tifffile = "^2022.5.4"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
